--- a/src/storyblok/components.326651.json
+++ b/src/storyblok/components.326651.json
@@ -443,6 +443,41 @@
       "component_group_name": "Nestable blocks"
     },
     {
+      "name": "headline",
+      "display_name": null,
+      "description": "",
+      "created_at": "2025-03-24T11:27:53.840Z",
+      "updated_at": "2025-03-24T11:29:20.044Z",
+      "id": 7121901,
+      "schema": {
+        "headline": {
+          "type": "text",
+          "pos": 0,
+          "id": "yExNd4QaRy-YyPqiKMR7UQ"
+        },
+        "extraPadding": {
+          "type": "boolean",
+          "pos": 1,
+          "id": "q_WhFIW8Qzaezb4HDllkbA"
+        }
+      },
+      "image": null,
+      "preview_field": null,
+      "is_root": false,
+      "preview_tmpl": null,
+      "is_nestable": true,
+      "all_presets": [],
+      "preset_id": null,
+      "real_name": "headline",
+      "component_group_uuid": "all",
+      "color": "#2db47d",
+      "icon": null,
+      "internal_tags_list": [],
+      "internal_tag_ids": [],
+      "content_type_asset_preview": null,
+      "component_group_name": ""
+    },
+    {
       "name": "hero",
       "display_name": null,
       "description": null,
