--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint && npx stylelint \"**/*.scss\"",
-    "lint:fix": "next lint --fix && npx stylelint \"**/*.scss\" --fix && npm run prettier:format",
+    "lint": "next lint && stylelint \"**/*.scss\"",
+    "lint:fix": "next lint --fix && stylelint \"**/*.scss\" --fix && npm run prettier:format",
     "lint:package": "npx sort-package-json",
     "lint:staged": "npx lint-staged",
     "prettier:check": "npx prettier --config .prettierrc '**/*.{ts,tsx}' --check --ignore-path .eslintignore",
@@ -44,7 +44,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "prettier": "^3.1.1",
-    "reset-css": "^5.0.2",
     "stylelint": "^16.3.1",
     "stylelint-config-css-modules": "^4.4.0",
     "stylelint-config-standard": "^34.0.0",
