--- a/package.json
+++ b/package.json
@@ -39,17 +39,17 @@
     "eslint-config-next": "15.1.7",
     "eslint-plugin-sonarjs": "^3.0.2",
     "postcss": "^8",
-    "storyblok-generate-ts": "^2.1.0",
-    "sass": "^1.85.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
     "prettier": "^3.1.1",
-    "stylelint": "^16.3.1",
+    "sass": "^1.85.0",
+    "storyblok-generate-ts": "^2.1.0",
+    "stylelint": "^15.11.0",
     "stylelint-config-css-modules": "^4.4.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-order": "^6.0.4",
     "stylelint-scss": "^5.3.2",
-    "stylelint-selector-bem-pattern": "^3.0.1"
+    "stylelint-selector-bem-pattern": "^3.0.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
