remove eslint packages for now

--- a/package.json
+++ b/package.json
@@ -6,12 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint && stylelint \"**/*.scss\"",
-    "lint:fix": "next lint --fix && stylelint \"**/*.scss\" --fix && npm run prettier:format",
-    "lint:package": "npx sort-package-json",
-    "lint:staged": "npx lint-staged",
-    "prettier:check": "npx prettier --config .prettierrc '**/*.{ts,tsx}' --check --ignore-path .eslintignore",
-    "prettier:format": "npx prettier --config .prettierrc '**/*.{ts,tsx}' --write --ignore-path .eslintignore",
+    "lint": "next lint",
     "dotenv-test": " dotenv cross-var \"echo STORYBLOK_SPACE_ID %STORYBLOK_SPACE_ID%\"",
     "generate-sb-types:mac": "cd src/storyblok/ && npx storyblok pull-components --space=326651 && npx storyblok-generate-ts source=components.326651.json target=component-types-sb"
   },
@@ -26,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "reset-css": "^5.0.2",
+    "sass": "^1.85.0",
     "storyblok-rich-text-react-renderer": "^2.9.2"
   },
   "devDependencies": {
@@ -39,16 +35,7 @@
     "eslint-config-next": "15.1.7",
     "eslint-plugin-sonarjs": "^3.0.2",
     "postcss": "^8",
-    "prettier": "^3.1.1",
-    "sass": "^1.85.0",
     "storyblok-generate-ts": "^2.1.0",
-    "stylelint": "^15.11.0",
-    "stylelint-config-css-modules": "^4.4.0",
-    "stylelint-config-standard": "^37.0.0",
-    "stylelint-config-standard-scss": "^13.1.0",
-    "stylelint-order": "^6.0.4",
-    "stylelint-scss": "^5.3.2",
-    "stylelint-selector-bem-pattern": "^3.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
