--- a/src/storyblok/components.326651.json
+++ b/src/storyblok/components.326651.json
@@ -447,7 +447,7 @@
       "display_name": null,
       "description": "",
       "created_at": "2025-03-24T11:27:53.840Z",
-      "updated_at": "2025-03-24T11:29:20.044Z",
+      "updated_at": "2025-03-24T11:52:02.139Z",
       "id": 7121901,
       "schema": {
         "headline": {
@@ -469,13 +469,13 @@
       "all_presets": [],
       "preset_id": null,
       "real_name": "headline",
-      "component_group_uuid": "all",
+      "component_group_uuid": "46060bef-a421-41d9-9c44-567227184725",
       "color": "#2db47d",
       "icon": null,
       "internal_tags_list": [],
       "internal_tag_ids": [],
       "content_type_asset_preview": null,
-      "component_group_name": ""
+      "component_group_name": "Nestable blocks"
     },
     {
       "name": "hero",
