--- a/src/storyblok/components.326651.json
+++ b/src/storyblok/components.326651.json
@@ -153,6 +153,62 @@
       "component_group_name": "Nestable blocks"
     },
     {
+      "name": "contact_CTA",
+      "display_name": null,
+      "description": "",
+      "created_at": "2025-03-25T12:26:16.306Z",
+      "updated_at": "2025-03-25T12:28:15.085Z",
+      "id": 7127042,
+      "schema": {
+        "image": {
+          "type": "asset",
+          "pos": 0,
+          "id": "HJP0Yt9QSm66qtXNPcUI8Q"
+        },
+        "name": {
+          "type": "text",
+          "pos": 1,
+          "id": "1ymLOc1dR4mWHz1Lc-Y-lQ"
+        },
+        "position": {
+          "type": "text",
+          "pos": 2,
+          "id": "uY8faZT8QPqR14H41CARYg"
+        },
+        "mail_link": {
+          "type": "multilink",
+          "pos": 3,
+          "id": "zhlTfCJdTKmDEL7xaCUttg"
+        },
+        "button": {
+          "type": "bloks",
+          "pos": 4,
+          "maximum": 1,
+          "restrict_type": "",
+          "restrict_components": true,
+          "component_whitelist": [
+            "button_link"
+          ],
+          "id": "2qFdAf9qSjizZNRBd6CGlA"
+        }
+      },
+      "image": null,
+      "preview_field": null,
+      "is_root": false,
+      "preview_tmpl": null,
+      "is_nestable": true,
+      "all_presets": [],
+      "preset_id": null,
+      "real_name": "contact_CTA",
+      "component_group_uuid": "46060bef-a421-41d9-9c44-567227184725",
+      "color": null,
+      "icon": null,
+      "internal_tags_list": [],
+      "internal_tag_ids": [],
+      "content_type_asset_preview": null,
+      "component_group_name": "Nestable blocks"
+    },
+    {
       "name": "feature",
       "display_name": null,
       "description": null,
@@ -418,22 +474,9 @@
       "display_name": null,
       "description": "",
       "created_at": "2025-03-11T13:04:13.856Z",
-      "updated_at": "2025-03-17T12:51:04.951Z",
+      "updated_at": "2025-03-26T08:33:11.679Z",
       "id": 7069053,
       "schema": {
-        "logo": {
-          "type": "asset",
-          "pos": 0,
-          "id": "SCR8p86_QFyB_7xEcpoDNg",
-          "filetypes": [
-            "images"
-          ]
-        },
-        "logo_small": {
-          "type": "asset",
-          "pos": 1,
-          "id": "CnQOTnySTxaRHZuJtCVhQg"
-        },
         "homepage_link": {
           "type": "multilink",
           "pos": 2,
