--- a/src/storyblok/components.326651.json
+++ b/src/storyblok/components.326651.json
@@ -157,7 +157,7 @@
       "display_name": null,
       "description": "",
       "created_at": "2025-03-25T12:26:16.306Z",
-      "updated_at": "2025-03-25T12:28:15.085Z",
+      "updated_at": "2025-03-26T10:51:19.238Z",
       "id": 7127042,
       "schema": {
         "image": {
@@ -201,7 +201,7 @@
       "preset_id": null,
       "real_name": "contact_CTA",
       "component_group_uuid": "46060bef-a421-41d9-9c44-567227184725",
-      "color": null,
+      "color": "#2db47d",
       "icon": null,
       "internal_tags_list": [],
       "internal_tag_ids": [],
@@ -260,14 +260,9 @@
       "display_name": null,
       "description": "",
       "created_at": "2025-03-11T16:23:28.342Z",
-      "updated_at": "2025-03-17T12:50:55.010Z",
+      "updated_at": "2025-03-26T10:52:53.301Z",
       "id": 7069971,
       "schema": {
-        "footer_logo": {
-          "type": "asset",
-          "pos": 0,
-          "id": "io8mq3YTT_mlRYUn-dV4ow"
-        },
         "main_column": {
           "type": "bloks",
           "pos": 1,
